Bug 553769: [Doclet] add support for Java9 Doclet API
  stick to Java8 API

Change-Id: I5d1d709afaa95b985b594f5967f90b1615c4ea52